# psru-photobooth

./: .gitignore  LICENSE  README.md  SETUP.md  USAGE.md  docker-compose.yml  index.html  openapi.yaml  render.yaml  schema.sql
.github/workflows/: ci.yml  e2e.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements.txt
backend/app/: __init__.py  branding.py  config.py  db.py  events.py  main.py  models.py  pipeline.py  schemas.py  security.py  seed.py  storage.py
backend/app/ai/: __init__.py  base.py  cv.py  mock.py  triton.py
backend/app/routers/: admin.py  auth.py  health.py  jobs.py  outputs.py  scenes.py  sessions.py  stats.py  ws.py
backend/keycloak/: realm-export.json
backend/tests/: conftest.py  test_ai_backend.py  test_auth.py  test_flow.py  test_ws.py
docs/: 01-system-architecture.md  02-database-design.md  03-api-specification.md  04-ai-workflow.md  05-vr-scene-library.md  06-security-architecture.md  07-deployment-architecture.md  08-branding-guideline.md  09-cost-estimation.md  10-roadmap-kpi-maintenance.md  11-phase2-ai-pipeline.md
e2e/: .gitignore  README.md  capture.mjs  kiosk.e2e.mjs  package.json
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApiBadge.tsx  AuthControls.tsx  Header.tsx  LoginCard.tsx  Stepper.tsx
frontend/src/lib/: api.ts  auth.tsx  (+3 more)
(+8 files in other folders)
