[project]
name = "psru-photobooth-api"
version = "1.0.0"
description = "PSRU AI Virtual Photo Booth & VR Studio — Core API (Phase 1)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
